kubernetes/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: ems
  labels:
    app: admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin-app
        image: koti21/admin:latest
        ports:
        - containerPort: 8082
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  labels:
    app: admin
spec:
  selector:
    app: admin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082
    nodePort: 30082
  type: NodePort
