kubernetes/tickets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
  namespace: ems
  labels:
    app: ticket
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
      - name: ticket-app
        image: koti21/ticket:latest
        ports:
        - containerPort: 8083
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  labels:
    app: ticket
spec:
  selector:
    app: ticket
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8083
    nodePort: 30083
  type: NodePort
