kubernetes/employee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-deployment
  namespace: ems
  labels:
    app: employee
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
      - name: employee-app
        image: koti21/employee:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  labels:
    app: employee
spec:
  selector:
    app: employee
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: api-gateway
 namespace: ems
 annotations:
   konghq.com/strip-path: "false"
  #  konghq.com/plugins: jwt-plugin   # Plugin names referenced in KongPlugin resources
   kubernetes.io/ingress.class: kong
   konghq.com/methods: "GET, POST"
spec:
 ingressClassName: kong
 rules:
   - http:
       paths:
         - path: /employee
           pathType: Prefix
           backend:
             service:
               name: employee-service
               port:
                 number: 80
