kubernetes/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: api-gateway
 namespace: ems
 annotations:
   konghq.com/strip-path: "false"
  #  konghq.com/plugins: jwt-plugin   # Plugin names referenced in KongPlugin resources
   kubernetes.io/ingress.class: kong
   konghq.com/methods: "GET, POST"
spec:
 ingressClassName: kong
 rules:
   - http:
       paths:
         - path: /employee
           pathType: Prefix
           backend:
             service:
               name: employee-service
               port:
                 number: 80

         - path: /
           pathType: Prefix
           backend:
             service:
               name: auth-service
               port:
                number: 80

         - path: /admin
           pathType: Prefix
           backend:
            service:
              name: admin-service
              port:
                number: 80

         - path: /tickets
           pathType: Prefix
           backend:
             service:
               name: ticket-service
               port:
                number: 80
